welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:6: error: Boolean does not take parameters
      forward()
             ^