welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(stepCount: Int, forward: Boolean){
  
  for (i <- 1 to stepCount){
    if (forward){
      forward()
    
  	}else{
      backward()
    }
  }
}